# certificate_bot

./: docker-compose.yml  pyproject.toml
repository/: certificate_crud.py  course_curd.py  crud.py  database.py  models.py  person_crud.py
services/: pdf_generator.py  zip_manager.py
utils/: certificate_number_generator.py
