[project]
name = "certificate-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammad Mehdi Yadegarifard",email = "43511859+myadegari@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytelegrambotapi (>=4.27.0,<5.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "uuid (>=1.30,<2.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "odmantic (>=1.0.2,<2.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "pdfkit (>=1.0.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
